RESOLVED FIXED163854
Fix repainting in WK1 when page scale is applied
https://bugs.webkit.org/show_bug.cgi?id=163854
Summary Fix repainting in WK1 when page scale is applied
Simon Fraser (smfr)
Reported 2016-10-22 13:00:37 PDT
Fix repainting in WK1 when page scale is applied
Attachments
Patch (5.29 KB, patch)
2016-10-22 13:04 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2016-10-22 13:04:58 PDT
Simon Fraser (smfr)
Comment 2 2016-10-24 21:43:57 PDT
Note You need to log in before you can comment on or make changes to this bug.