Fix repainting of slow repaint objects in WK1 when page scale is applied https://bugs.webkit.org/show_bug.cgi?id=163854

Reviewed by Zalan Bujtas.

Source/WebCore:

RenderObject::repaintSlowRepaintObject() always set the repaint container to the RenderView
if it was null. This is before the call to clippedOverflowRectForRepaint(). If that function
is called with a null repaintContainer, it maps the rect up through the RenderView's transform
(which represents page scale), which is what we want here. Passing the RenderView itself
stops the transform from being applied, which led to the bug.

WebKit2 doesn't suffer from this bug because containerForRepaint() always returns the
composited RenderView.

Test: fast/repaint/zoomed-fixed-background.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::repaintSlowRepaintObject):

LayoutTests:

Test that logs the repaint rect after scrolling a page with an element
with a fixed background. The WebKit1 result is the interesting one.

* fast/repaint/zoomed-fixed-background-expected.txt: Added.
* fast/repaint/zoomed-fixed-background.html: Added.
* platform/mac-wk1/fast/repaint/zoomed-fixed-background-expected.txt: Added.

Canonical link: https://commits.webkit.org/181599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207721 268f45cc-cd09-0410-ab3c-d52691b4dbfc